# FreeCell

./: Automation.hs  Cards.hs  FreeCell.cabal  FreeCell.hs  History.hs  LICENSE  Main.hs  TODO  TextUI.hs
