Name:                FreeCell
Version:             0.0.1
Description:         FreeCell patience
License:	         BSD3
License-file:        LICENSE
Author:              Anatoli Sakhnik
Maintainer:          sakhnik@gmail.com
Build-Depends:       base, haskell98, QuickCheck

Executable:          FreeCell
Main-is:             Main.hs
ghc-options:         -O
